<resources>
    <string name="app_name">Sales Admin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_admin_email">Email Address</string>
    <string name="login">Login</string>
    <string name="create_an_admin_account">Create an admin account</string>
    <string name="admin_name">Enter Your Name</string>
    <string name="admin_email">Email Address</string>
    <string name="admin_phone">Phone Number</string>
    <string name="admin_password">Password</string>
    <string name="admin_address">Address</string>
    <string name="signUp_button">SignUp</string>
    <string name="login_register_button">Already registered! Login me</string>
    <string name="login_email">Email Address</string>
    <string name="login_password">Password</string>
    <string name="Login_header">Login</string>
    <string name="Signup_header">Create a New Account</string>
    <string name="add_employee">Employee</string>
    <string name="no_collection">No collections taken</string>
    <string name="no_party">No party available </string>
    <string name="send_email">Send reset password link</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="enter_employee_name">Enter employee name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="cancel">Cancel</string>
    <string name="Product_description">Description</string>
    <string name="search_view">Search Here</string>
    <string name="Product_name">Product Name</string>
    <string name="Product_price">Price</string>
    <string name="Product__add_price">Price :</string>
    <string name="Product_quantity">Quantity</string>
    <string name="add_product">Add Product</string>
    <string name="products">Products</string>
    <string name="register">Register</string>
    <string name="Hello">Hello, %1$s!</string>
    <string name="add_new_product">Add new Product</string>
    <string name="api_key">AIzaSyDklqaN4Gxa4Ej2xhj936gfEmvbG7eOtjk</string>
    <string name="name">Name:</string>
    <string name="no_product">No Product Added</string>
    <string name="no_employee">No Employee Added</string>
    <string name="email">Email:</string>
    <string name="mob_no">Mobile No:</string>
    <string name="parties">Parties</string>
    <string name="party_name">Party name</string>
    <string name="contact_name">Contact person name</string>
    <string name="add_party">Add Party</string>
    <string name="add_new_party">Add new party</string>
    <string name="send_notificatio">Send Notification</string>
    <string name="notification_title">Title </string>
    <string name="notification_msg">Message</string>
    <string name="send_notification">Send Notification</string>
    <string name="pin_code">Pin Code</string>
    <string name="district">District</string>
    <string name="state">State</string>
    <string name="check">Check</string>
    <string name="Edit">edit</string>
    <string name="employee">Employee name :</string>
    <string name="leave_date">Leave date :</string>
    <string name="reason">Reason :</string>
    <string name="leave_type">Leave type :</string>
    <string name="status">Status :</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="accepted">Accepted</string>
    <string name="rejected">Rejected</string>
    <string name="no_orders_taken">No orders taken</string>
    <string name="emp_leaves">Employee leaves</string>
    <string name="no_leaves">No leaves requests from the employee</string>
    <string name="from_date">From Date :</string>
    <string name="to_date">To Date :</string>
    <string name="collections">Collections</string>
    <string name="amount">Amount :</string>
    <string name="collection_type">Collection type :</string>
    <string name="party_name_collection">Party name :</string>
    <string name="date">Date :</string>
    <string name="note">Note :</string>
    <string name="party_address">Address :</string>
    <string name="product_description">Description</string>
    <string name="product_add_description">Description :</string>
    <string name="tracking">Tracking</string>
    <string name="party_name_order">Party name :</string>
    <string name="order">Orders</string>
    <string name="no_employee_availble">No employee is checked In</string>
    <string name="last_location_time">Last location updated on :</string>
    <string name="employee_list">List of employee</string>
    <string name="view_details">View details</string>
    <string name="rupees">₹</string>
    <string name="home_navigation">Home</string>
    <string name="profile_navigation">Profile</string>
    <string name="sign_Out">Sign Out</string>
    <string name="update">Update </string>
    <string name="date_of_joining">Date of Joining</string>
    <string name="edit">edit</string>
    <string name="profile_name">Name</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="admin_splash">Admin</string>
    <string name="orders">Order</string>
    <string name="party_details">Party details</string>
    <string name="order_taken_on">Order taken on</string>
    <string name="time">Time :</string>
</resources>