<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.AddParties">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <EditText
            android:id="@+id/et_party_name"
            android:layout_width="0dp"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:autofillHints=""
            android:background="@drawable/et_custom"
            android:ems="10"
            android:hint="@string/party_name"
            android:inputType="textMultiLine"
            android:paddingLeft="10dp"
            android:textSize="@dimen/text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_party_address"
            android:layout_width="0dp"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:autofillHints=""
            android:background="@drawable/et_custom"
            android:ems="10"
            android:hint="@string/admin_address"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:textSize="@dimen/text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_party_name" />


        <EditText
            android:id="@+id/et_party_phone"
            android:layout_width="0dp"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:autofillHints=""
            android:background="@drawable/et_custom"
            android:ems="10"
            android:gravity="fill"
            android:hint="@string/admin_phone"
            android:inputType="phone"
            android:maxLength="10"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:textSize="@dimen/text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_district" />

        <EditText
            android:id="@+id/et_contact_person"
            android:layout_width="0dp"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:autofillHints=""
            android:background="@drawable/et_custom"
            android:ems="10"
            android:gravity="fill"
            android:hint="@string/contact_name"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:textSize="@dimen/text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_party_phone" />

        <Button
            android:id="@+id/btn_add_party"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/btn_custom"
            android:text="@string/add_party"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_contact_person" />

        <EditText
            android:id="@+id/et_pincode"
            android:layout_width="0dp"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:autofillHints=""
            android:background="@drawable/et_custom"
            android:ems="10"
            android:gravity="fill"
            android:hint="@string/pin_code"
            android:inputType="number"
            android:maxLength="6"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:textSize="@dimen/text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_party_address" />

        <TextView
            android:id="@+id/tv_district"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="48dp"
            android:autofillHints=""
            android:background="@drawable/et_custom"
            android:ems="10"
            android:gravity="fill"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:text="@string/district"
            app:layout_constraintEnd_toStartOf="@+id/tv_state"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_pincode" />

        <TextView
            android:id="@+id/tv_state"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:autofillHints=""
            android:background="@drawable/et_custom"
            android:ems="10"
            android:gravity="fill"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:text="@string/state"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_district"
            app:layout_constraintTop_toBottomOf="@+id/et_pincode" />

        <include
            layout="@layout/include_progress_bar"
            android:layout_width="77dp"
            android:layout_height="57dp"
            android:foregroundGravity="center"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/check_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/check"
            android:textColor="@color/teal_700"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/et_pincode"
            app:layout_constraintHorizontal_bias="0.984"
            app:layout_constraintStart_toStartOf="@+id/et_pincode"
            app:layout_constraintTop_toTopOf="@+id/et_pincode" />

        <ImageView
            android:id="@+id/verified_iv"
            android:layout_width="33dp"
            android:layout_height="38dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="TODO"
            android:src="@drawable/right_image"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/et_pincode"
            app:layout_constraintEnd_toEndOf="@+id/check_tv"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/et_pincode"
            app:layout_constraintTop_toTopOf="@+id/et_pincode"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/edit_tv"
            android:layout_width="54dp"
            android:layout_height="0dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="8dp"
            android:text="@string/Edit"
            android:textColor="@color/teal_700"
            android:textSize="18sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/et_pincode"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>